@@ -257,7 +257,7 @@
 #------------------------------------------------------------------------------
 # ■アップロード許可拡張子の設定
 #------------------------------------------------------------------------------
-# ※拡張子は「中間拡張子」も含めすべて許可されてる必要があります。
+# 拡張子は「中間拡張子」も含めすべて許可されてる必要があります。
 
 # 許可する画像の拡張子
 <$v.album_image_ext = flagq(jpg, jpeg, gif, png, ico, tif, tiff)>
@@ -265,7 +265,5 @@
 # 追加で許可する画像以外の拡張子
 #<$v.album_allow_ext = flagq(dat, msi)>
 
-# ※標準で許可する画像以外の拡張子は album/_load_extensions.html で定義されています。
-
-# adiary-3.0.tgz や adiary-3.00-beta1.3.tbz のようなVersion表記拡張子を許可する。
-<$v.album_allow_ver_ext = 1>
+# 標準で許可する画像以外の拡張子は album/_load_extensions.html で定義されています。
+# その他、安全と思われる拡張子は無条件で許可するようになっています。
