@@ -3,7 +3,9 @@
 *Ver3.24 : 2019/xx/xx
 
 -RSSからのリンクhash（#rss-tm）を除去する際、リロードしないようにしました。
--【fix/conf】trust_mode時に、拡張子制限が外れるという誤った説明が残っていた。((危険すぎるため途中で制限が外れないよう仕様変更されたのですが、説明を変更するのを忘れていた。))
+-アルバムにアップロード時の拡張子制約を緩和し、半角英数以外を含むものを許可しました。（[https://adiary.adiary.jp/0409#c1:Thanks to harata]）
+-【conf】{<$v.album_allow_ver_ext>}の設定を削除
+trust_mode時に、拡張子制限が外れるという誤った説明が残っていた。((危険すぎるため途中で制限が外れないよう仕様変更されたのですが、説明を変更するのを忘れていた。))
 -【Fix/httpd】mime.types をロードする際、コメントも処理していた。
 
 *Ver3.23 : 2019/03/12
